<resources>
    <string  translatable="false"  name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
    <string  translatable="false"   name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
    <string  translatable="false"   name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
    <string  translatable="false"   name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
    <string  translatable="false"   name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
    <string  translatable="false"   name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
    <string  translatable="false"   name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
    <string  translatable="false"   name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
    <string  translatable="false"   name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
    <string  translatable="false"   name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
    <string  translatable="false"   name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
    <string  translatable="false"   name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
    <string  translatable="false"   name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
    <string  translatable="false"   name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
    <string  translatable="false"   name="cameraview_filter_lomoish">com.otaliastudios.cameraview.filters.LomoishFilter</string>
    <string  translatable="false"   name="cameraview_filter_none">com.otaliastudios.cameraview.filter.NoFilter</string>
    <string  translatable="false"   name="cameraview_filter_posterize">com.otaliastudios.cameraview.filters.PosterizeFilter</string>
    <string  translatable="false"   name="cameraview_filter_saturation">com.otaliastudios.cameraview.filters.SaturationFilter</string>
    <string  translatable="false"   name="cameraview_filter_sepia">com.otaliastudios.cameraview.filters.SepiaFilter</string>
    <string  translatable="false"   name="cameraview_filter_sharpness">com.otaliastudios.cameraview.filters.SharpnessFilter</string>
    <string  translatable="false"   name="cameraview_filter_temperature">com.otaliastudios.cameraview.filters.TemperatureFilter</string>
    <string  translatable="false"   name="cameraview_filter_tint">com.otaliastudios.cameraview.filters.TintFilter</string>
    <string  translatable="false"   name="cameraview_filter_vignette">com.otaliastudios.cameraview.filters.VignetteFilter</string>
    <string  translatable="false"   name="app_name">Debug GPS Camera with Time Stamp</string>
    <string  translatable="false"   name="app_name1">GPS Camera \nwith Time Stamp</string>
    <string  translatable="false"   name="MAP_KEY">AIzaSyDJhjZF35ImndGG0Ma6dpI9eLgoLGShkNA</string>
    <string  translatable="false"   name="androidx_startup">androidx.startup</string>
    <string  translatable="false"   name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string  translatable="false"   name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string  translatable="false"   name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string  translatable="false"   name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string  translatable="false"   name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string  translatable="false"   name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string  translatable="false"   name="preference_tips">com.fom.rapid.assistant.heymoon.tips</string>
    <string  translatable="false"   name="privacy_link">file:///android_res/raw/privacy_policy.html</string>
    <string  translatable="false"   name="project_id">gps-photo-location-with-fc364</string>
    <string  translatable="false"   name="worldwindkotlin">WorldWindKotlin</string>
    <string  translatable="false"   name="copyright_2025_worldwindearth">Copyright 2025 WorldWindEarth</string>
    <string  translatable="false"   name="worldwindkotlin_apache">Licensed under the Apache License, Version 2.0.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Exit</string>
    <string name="gpl1">Photo</string>
    <string name="gpl10">Done</string>
    <string name="gpl11">Fetching....</string>
    <string name="gpl12">Type</string>
    <string name="gpl13">Degree</string>
    <string name="gpl14">DMS</string>
    <string name="gpl15">Latitude</string>
    <string name="gpl16">Longitude</string>
    <string name="gpl17">Temp</string>
    <string name="gpl18">Please Install Facebook</string>
    <string name="gpl19">Please Install Instagram</string>
    <string name="gpl2">Location with map</string>
    <string name="gpl20">Please Install Whatsapp</string>
    <string name="gpl21">Something is wrong</string>
    <string name="gpl22">GPS Photo Location</string>
    <string name="gpl23">Capture your amazing moments</string>
    <string name="gpl24">GPS Camera</string>
    <string name="gpl25">Map View</string>
    <string name="gpl26">Photo Grid</string>
    <string name="gpl27">Camera</string>
    <string name="gpl28">Gallery</string>
    <string name="gpl29">Saved Images</string>
    <string name="gpl3">This action may contain ads…</string>
    <string name="gpl30">See More</string>
    <string name="gpl4">Choose Your Language</string>
    <string name="gpl4_1">Current Language</string>
    <string name="gpl4_2">Default Language</string>
    <string name="gpl5">GPS Photo Camera</string>
    <string name="gpl6">Capture photos with notes automatically in GPS camera with automatic note in geotagging camera.</string>
    <string name="gpl7">Map View</string>
    <string name="gpl7_1">Photo Grid</string>
    <string name="gpl8">The map shows all the images you have on it and you can browse them based on their location.</string>
    <string name="gpl8_1">Create collages with a location view to make your photo more appealing, using a variety of grid designs.</string>
    <string name="gpl9">Next</string>
    <string name="gpl_title">GPS</string>
    <string name="gps31">Next</string>
    <string name="gps32">Save</string>
    <string name="gps33">Preview</string>
    <string name="gps34">Delete Image</string>
    <string name="gps35">Are you sure delete this image?</string>
    <string name="gps36">Delete</string>
    <string name="gps37">Cancel</string>
    <string name="gps38">Please Wait</string>
    <string name="gps39">Advance Camera</string>
    <string name="gps40">Location Not Found</string>
    <string name="gps41">Tap to add Location</string>
    <string name="gps42">Recent Search</string>
    <string name="gps43">Search Location</string>
    <string name="gps44">Conform your location by taping this button.</string>
    <string name="gps45">Layout Settings</string>
    <string name="gps46">Gallery Layout</string>
    <string name="gps47">Map + Address</string>
    <string name="gps48">Map + Lat/Lng</string>
    <string name="gps49">Address</string>
    <string name="gps50">Lat/Lng</string>
    <string name="gps51">Could you please confirm that you want to exit without saving?</string>
    <string name="gps52">Yes</string>
    <string name="gps53">Oops No!</string>
    <string name="gps54">Select Grid</string>
    <string name="gps55">Background Color</string>
    <string name="gps56">Black</string>
    <string name="gps57">White</string>
    <string name="gps58">Lat :</string>
    <string name="gps59">Long :</string>
    <string name="gps60">Location</string>
    <string name="gps61">Template</string>
    <string name="gps62">Video</string>
    <string name="gps63">Current</string>
    <string name="gps64">Manual</string>
    <string name="gps65">Conform your location by taping done button.</string>
    <string name="gps66">My Creation</string>
    <string name="gps67">Video</string>
    <string name="gps68">Permission</string>
    <string name="gps69">You need to grant access to the device camera,photo library and location to take photos or record video.</string>
    <string name="gps70">Camera &amp; Microphone Permission</string>
    <string name="gps71">Location Permission</string>
    <string name="gps72">Photo &amp; Video Permission</string>
    <string name="gps73">Notification Permission</string>
    <string name="gps74">Get Start</string>
    <string name="gps75">Saved Video</string>
    <string name="gps76">Rate Us!</string>
    <string name="gps77">What do you think about this application?</string>
    <string name="gps78">Let us know by leaving a 5 star rating</string>
    <string name="gps79">Rate us now</string>
    <string name="gps80">Please Select at list 1 star</string>
    <string name="gps81">Please Install Gmail</string>
    <string name="gps82">Privacy Policy</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="enter_current_location">Enter current location</string>
    <string name="enter_destination_location">Enter destination location</string>
    <string name="show_map">Show Map</string>
    <string name="current_location">Current Location</string>
    <string name="maptype">Map Type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="digital_compass_style">Digital Compass Style</string>
    <string name="done">Done</string>
    <string name="compass">Compass</string>
    <string name="change_compass_style">Change compass style</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_1">Dive into \n 3D Earth View</string>
    <string name="intro_2">Snap &amp; Stamp \n Real-time</string>
    <string name="intro_3">Personalize \n your watermark</string>
    <string name="intro_4">Easy to add tags \n to photos</string>
    <string name="intro_33">Capture images with the GPS Camera Photo Location app, automatically embedding precise details such as latitude, longitude</string>
    <string name="skip">Skip</string>
    <string name="check_internet">Please check internet connection and try again</string>
    <string name="privacy_splash">By press the Agree button below, you agree to our Privacy Policy and Terms of Conditions.</string>
    <string name="agree">Agree</string>
    <string name="do_you_really_want_to_exit">Are You Sure Want to Exit?</string>
    <string name="language">Select Language</string>
    <string name="next">Next</string>
    <string name="get_start">Get Started</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="earth_view">Earth view</string>
    <string name="which_features_are_you_interested_in">Which features are you interested in?</string>
    <string name="contin">Continue</string>
    <string name="timestamp_camera">Timestamp camera</string>
    <string name="photo_grid">Photo Grid</string>
    <string name="route_planner">Route planner</string>
    <string name="camera">Camera</string>
</resources>