<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_nofification"
    android:gravity="center_vertical"
    android:paddingVertical="4dp">

    <LinearLayout
        android:id="@+id/llEarthView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icn_earth_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/earth_view"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="24dp"
        android:background="#D0D5E0" />

    <LinearLayout
        android:id="@+id/llCamera"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_cameraa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="24dp"
        android:background="#D0D5E0" />

    <LinearLayout
        android:id="@+id/llGrid"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/photo_grid" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/photo_grid"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="24dp"
        android:background="#D0D5E0" />

    <LinearLayout
        android:id="@+id/llRoute"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icn_route_planner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/route_planner"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>