<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="70dp"
        android:background="@drawable/item_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center_horizontal"
                android:text="@string/do_you_really_want_to_exit"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_dialog"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/iv_yes"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rect_round_main_blue"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/iv_no"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rect_round_main_blue"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/Ad_Native"
                style="@style/medium_attr"
                android:layout_marginBottom="@dimen/_10sdp" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>